--- a/src/style.scss
+++ b/src/style.scss
@@ -77,6 +77,11 @@ main {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.05), 0px 6px 6px rgba(0, 0, 0, 0.1),
       0px 8px 8px rgba(0, 0, 0, 0.05), 0px 10px 15px rgba(0, 0, 0, 0.03),
       0px 30px 30px rgba(0, 0, 0, 0.15), 0px 70px 60px rgba(0, 0, 0, 0.15);
+
+    @media only screen and (max-width: 600px) {
+      width: 3rem;
+      height: 2.6rem;
+    }
   }
 }
 .block::after {
